Ensure banner button border stays within box; ensure banner stays in place on mobile

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -54,8 +54,9 @@ nav.banner {
 .banner-menu-item {
 	height: 100%;
 	padding: 0 20px;
+	border-bottom: 5px solid transparent;
 }
 
 .banner-menu-item.selected {
-	border-bottom: 5px solid var(--col-accent-dark)
+	border-bottom: 5px solid var(--col-accent-dark);
 }
