--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -75,15 +75,16 @@ nav.banner {
 }
 
 #banner-menu-list > li {
-	border-bottom: 5px solid lightgrey;
+	border-bottom: 2px solid lightgrey;
 }
 
 .banner-menu-item {
 	font-size: 2vh;
 	text-align: left;
 	padding: 2vh 2vh 2vh 4vh;
+	border-right: 2vw solid transparent;
 }
 
 .banner-menu-item.selected {
-	border-right: 2vw solid var(--col-accent-dark)
+	border-right: 2vw solid var(--col-accent-dark);
 }
